--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,16 @@ theme = "hugo_theme_beg"
 baseURL = "http://example.org/"
 languageCode = "en-us"
 title = "Ron Brown"
+googleAnalytics = ""
+disqusShortname = ""
+ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
+
+[[menu.main]]
+    name = "About"
+    url = "/about/"
+[[menu.main]]
+    name = "GitHub"
+    url = "https://github.com/brownrv"
+[[menu.main]]
+    name = "Twitter"
+    url = "https://twitter.com/ronvbrown"
