--- a/config.toml
+++ b/config.toml
@@ -10,6 +10,9 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     name = "About"
     url = "/about/"
 [[menu.main]]
+    name = "LinkedIn"
+    url = "https://www.linkedin.com/in/brownrv/"
+[[menu.main]]
     name = "GitHub"
     url = "https://github.com/brownrv"
 [[menu.main]]
