--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,7 @@ title = "Ron Brown"
 googleAnalytics = ""
 disqusShortname = ""
 ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
+relativeurls = true
 
 [[menu.main]]
     name = "About"
