--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ relativeurls = true
 
 [[menu.main]]
     name = "About"
-    url = "/about/"
+    url = "/about"
 [[menu.main]]
     name = "LinkedIn"
     url = "https://www.linkedin.com/in/brownrv/"
